third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-locals/use_before_assign_simple.exp

Diagnostics:
error: use of unassigned local `s`
  ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_simple.move:9:19
  │
9 │         let _s2 = s;
  │                   ^

error: use of unassigned local `x`
   ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_simple.move:14:17
   │
14 │         let _ = x + 1;
   │                 ^

error: use of unassigned local `s`
   ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_simple.move:17:24
   │
17 │         let _s3 = copy s;
   │                        ^

error: use of unassigned local `x`
   ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_simple.move:22:18
   │
22 │         let _ = &x;
   │                  ^

error: use of unassigned local `s`
   ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_simple.move:25:20
   │
25 │         let _s2 = &s;
   │                    ^
